fix overflow

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -38,7 +38,9 @@ body {
   position: relative;
 
   background: var(--color-light);
- overflow: hidden;
+ overflow-x: hidden;
+ overflow-y: auto;
+
 
 }
 
